Salary cycle added